--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 
-    <h1>Только курсы!</h1>
+    <h1>Здесь собраны только лучшие курсы!</h1>
     <hr>
+<h3>Сайт находиться в стадии разработки</h3>
 
