--- a/public/index.css
+++ b/public/index.css
@@ -31,3 +31,16 @@ h1{
     align-items: center;
     justify-content: space-between;
 }
+.mobile-hidden{
+   visibility: hidden;
+}
+@media (max-width: 992px) {
+    
+    .mobile-hidden{
+        visibility: visible
+    }
+    .material-icons{
+        position: relative;
+        top: -0.5em;
+    }
+ }
