--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,17 @@
 <!-- Compiled and minified JavaScript -->
+   <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script src='/app.js'></script>
+    <script>
+     document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.dropdown-trigger');
+    var instances = M.Dropdown.init(elems, options);
+  });
+    </script>
+    <script>
+  $('.dropdown-trigger').dropdown();</script>
