--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,11 +1,23 @@
   <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Courses App</a>
+      <a class='dropdown-trigger btn mobile-hidden' href='#' data-target='dropdown1'><i class="Medium material-icons">menu</i>  </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/">Главная</a></li>
         <li><a href="/courses">Курсы</a></li>
         <li><a href="/add">Добавить курс</a></li>
         <li><a href="/card">Корзина</a></li>
+       
       </ul>
-    </div>
+    
+
+  <!-- Dropdown Structure -->
+  <ul id='dropdown1' class='dropdown-content'>
+    <li><a href="/">Главная</a></li>
+        <li><a href="/courses">Курсы</a></li>
+        <li><a href="/add">Добавить курс</a></li>
+        <li><a href="/card">Корзина</a></li>
+       
+  </ul>
   </nav>
+   
