--- a/public/index.css
+++ b/public/index.css
@@ -34,6 +34,9 @@ h1{
 .mobile-hidden{
    visibility: hidden;
 }
+.delete-btn{
+    margin-top: 2rem;
+}
 @media (max-width: 992px) {
     
     .mobile-hidden{
