--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -7,7 +7,7 @@
       <div class="card">
         <div class="card-image">
           <img src="{{img}}" alt={{title}}>
-          <span class="card-title">Card Title</span>
+          <span class="card-title"></span>
         </div>
         <div class="card-content">
             <span class="card-title">{{title}}</span>
