--- a/public/index.css
+++ b/public/index.css
@@ -4,9 +4,14 @@ body{
     
 }
 h1{
-    color: blueviolet;
+   
     font-style: italic;
+    text-align: center;
 }
+h2,h3{
+    text-align: center;
+}
+
 .price{
     font-size: 2rem;
 }
@@ -39,6 +44,25 @@ h1{
 }
 .course img{
     width: auto;
+    min-width: 25%;
+}
+.pink-nav{
+    background-color:#ee6e73
+}
+.pink-nav:focus, .pink-nav:hover {
+    background-color:#ee6e73
+}
+.card-image{
+    max-height: 500px;
+}
+.card-image img{
+    height: 350px;
+}
+.d-inline{
+    display: inline-block;
+}
+.card{
+    min-height: 500px;
 }
 @media (max-width: 992px) {
     
