--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -2,8 +2,8 @@
 
 {{#if allCourses.length}}
 {{#each allCourses}}
- <div class="row">
-    <div class="col s6 offset-s3">
+ <div class="row d-inline">
+    <div class="col s12 offset-s3">
       <div class="card">
         <div class="card-image">
           <img src="{{img}}" alt={{title}}>
